--- a/Portfolio/My_Portfolio/templates/education.html
+++ b/Portfolio/My_Portfolio/templates/education.html
@@ -6,13 +6,16 @@
     <section class="login">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-md-6  box mt-4">
+            <div class="col-md-6  box mt-3">
+              <h3 style="color: aliceblue; font-weight: bolder; text-align: center;">Update Education</h3>
                   <form action="" method="POST">
                     {% csrf_token %}
                       <div class="form-group">
                           {{educ_form.as_p}}
                       </div>   
-                     <button type="submit" class="button">Save</button>
+                      <div class="text-center">
+                        <button type="submit" class="button">Save</button>
+                      </div>
           
                   </form>  
             </div>
