--- a/Portfolio/My_Portfolio/templates/updateProfile.html
+++ b/Portfolio/My_Portfolio/templates/updateProfile.html
@@ -7,12 +7,15 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-8 box">
+              <h3 style="color: aliceblue; font-weight: bolder; text-align: center;">Update Profile</h3>
                   <form action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                       <div class="form-group">
                           {{prof_form.as_p}}
                       </div>   
-                     <button type="submit" class="button">Save</button>
+                      <div class="text-center">
+                        <button type="submit" class="button">Save</button>
+                      </div>
           
                   </form>  
             </div>
